[FEATURE] Erstatt ping med helseendepunkt på /health
